# boids-project

./: .gitignore  Makefile  Makefile.in  aclocal.m4  config.status  configure  configure.ac  libtool
autom4te.cache/: output.2  output.3  output.4  output.5  requests  traces.0  traces.2  traces.3  traces.4  traces.5
src/: Makefile  Makefile.am  Makefile.in  ant-war  main.cxx
src/.deps/: Flock.Po  Renderer.Po  main.Po
src/model/: boid.h  flock.cpp  flock.h  vec2.h
src/utility/: renderer.cxx  renderer.h
